--- a/box.html
+++ b/box.html
@@ -7,10 +7,10 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="../../manifest/box/favicon.ico">
-  <link rel="manifest" href="../../manifest/box/manifest.json">
+  <link rel="icon" href="manifest/box/favicon.ico">
+  <link rel="manifest" href="manifest/box/manifest.json">
   <title>商店详情</title>
-<link href="../../css/box.3fe51d8b.css" rel="preload" as="style"><link href="../../js/box.4178b72f.js" rel="preload" as="script"><link href="../../js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="../../css/box.3fe51d8b.css" rel="stylesheet"></head>
+<link href="/css/box.3fe51d8b.css" rel="preload" as="style"><link href="/js/box.a7f451ee.js" rel="preload" as="script"><link href="/js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="/css/box.3fe51d8b.css" rel="stylesheet"></head>
 
 <body>
 <noscript>
@@ -20,15 +20,13 @@
   <div id="box"></div>
 </div>
 <!-- 生成的文件将自动注入 -->
-<script type="text/javascript" src="../../js/chunk-vendors.ecd76ec1.js"></script><script type="text/javascript" src="../../js/app.19ccf687.js"></script><script type="text/javascript" src="../../js/box.4178b72f.js"></script></body>
+<script type="text/javascript" src="/js/chunk-vendors.ecd76ec1.js"></script><script type="text/javascript" src="/js/app.594e2189.js"></script><script type="text/javascript" src="/js/box.a7f451ee.js"></script></body>
 <script>
   // 可以这么注册 Service Worker
-  console.log(123)
-
   if (navigator.serviceWorker) {
     // 注册Service Worker scope表示作用的页面的path
     // register函数返回Promise
-    navigator.serviceWorker.register('../../service-worker.js')
+    navigator.serviceWorker.register('manifest/service-worker.js')
       .then(function (registration) {
         console.log(registration);
       })
