--- a/page.html
+++ b/page.html
@@ -7,28 +7,26 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="../../manifest/shop/favicon.ico">
-  <link rel="manifest" href="../../manifest/shop/manifest.json">
-  <title>商店</title>
-<link href="../../js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="../../js/shop.f0e50ab7.js" rel="preload" as="script"></head>
+  <link rel="icon" href="manifest/page/favicon.ico">
+  <link rel="manifest" href="manifest/page/manifest.json">
+  <title>page</title>
+<link href="/css/page.3fe51d8b.css" rel="preload" as="style"><link href="/js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="/js/page.91d79c29.js" rel="preload" as="script"><link href="/css/page.3fe51d8b.css" rel="stylesheet"></head>
 
 <body>
 <noscript>
   <strong>[object Object]</strong>
 </noscript>
 <div id="app">
-  <div id="shop"></div>
+  <div id="page"></div>
 </div>
 <!-- 生成的文件将自动注入 -->
-<script type="text/javascript" src="../../js/chunk-vendors.ecd76ec1.js"></script><script type="text/javascript" src="../../js/app.19ccf687.js"></script><script type="text/javascript" src="../../js/shop.f0e50ab7.js"></script></body>
+<script type="text/javascript" src="/js/chunk-vendors.ecd76ec1.js"></script><script type="text/javascript" src="/js/app.594e2189.js"></script><script type="text/javascript" src="/js/page.91d79c29.js"></script></body>
 <script>
   // 可以这么注册 Service Worker
-  console.log(123)
-
   if (navigator.serviceWorker) {
     // 注册Service Worker scope表示作用的页面的path
     // register函数返回Promise
-    navigator.serviceWorker.register('../../service-worker.js')
+    navigator.serviceWorker.register('manifest/service-worker.js')
       .then(function (registration) {
         console.log(registration);
       })
