--- a/shop.html
+++ b/shop.html
@@ -7,20 +7,20 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="manifest/index/favicon.ico">
-  <link rel="manifest" href="manifest/index/manifest.json">
-  <title>首页</title>
-<link href="/css/index.3fe51d8b.css" rel="preload" as="style"><link href="/js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="/js/index.0f1e6ae9.js" rel="preload" as="script"><link href="/css/index.3fe51d8b.css" rel="stylesheet"></head>
+  <link rel="icon" href="manifest/shop/favicon.ico">
+  <link rel="manifest" href="manifest/shop/manifest.json">
+  <title>商店</title>
+<link href="/js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="/js/shop.da0b1d61.js" rel="preload" as="script"></head>
 
 <body>
 <noscript>
   <strong>[object Object]</strong>
 </noscript>
 <div id="app">
-  <div id="index"></div>
+  <div id="shop"></div>
 </div>
 <!-- 生成的文件将自动注入 -->
-<script type="text/javascript" src="/js/chunk-vendors.ecd76ec1.js"></script><script type="text/javascript" src="/js/app.594e2189.js"></script><script type="text/javascript" src="/js/index.0f1e6ae9.js"></script></body>
+<script type="text/javascript" src="/js/chunk-vendors.ecd76ec1.js"></script><script type="text/javascript" src="/js/app.594e2189.js"></script><script type="text/javascript" src="/js/shop.da0b1d61.js"></script></body>
 <script>
   // 可以这么注册 Service Worker
   if (navigator.serviceWorker) {
