--- a/shop.html
+++ b/shop.html
@@ -10,7 +10,7 @@
   <link rel="icon" href="manifest/shop/favicon.ico">
   <link rel="manifest" href="manifest/shop/manifest.json">
   <title>商店</title>
-<link href="/js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="/js/shop.da0b1d61.js" rel="preload" as="script"></head>
+<link href="/pwa-web/js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="/pwa-web/js/shop.9962d2f1.js" rel="preload" as="script"></head>
 
 <body>
 <noscript>
@@ -20,7 +20,7 @@
   <div id="shop"></div>
 </div>
 <!-- 生成的文件将自动注入 -->
-<script type="text/javascript" src="/js/chunk-vendors.ecd76ec1.js"></script><script type="text/javascript" src="/js/app.594e2189.js"></script><script type="text/javascript" src="/js/shop.da0b1d61.js"></script></body>
+<script type="text/javascript" src="/pwa-web/js/chunk-vendors.ecd76ec1.js"></script><script type="text/javascript" src="/pwa-web/js/app.47ca4404.js"></script><script type="text/javascript" src="/pwa-web/js/shop.9962d2f1.js"></script></body>
 <script>
   // 可以这么注册 Service Worker
   if (navigator.serviceWorker) {
