--- a/box.html
+++ b/box.html
@@ -10,7 +10,7 @@
   <link rel="icon" href="manifest/box/favicon.ico">
   <link rel="manifest" href="manifest/box/manifest.json">
   <title>商店详情</title>
-<link href="/pwa-web/css/box.3fe51d8b.css" rel="preload" as="style"><link href="/pwa-web/js/box.1e2bd2f8.js" rel="preload" as="script"><link href="/pwa-web/js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="/pwa-web/css/box.3fe51d8b.css" rel="stylesheet"></head>
+<link href="/../css/box.3fe51d8b.css" rel="preload" as="style"><link href="/../js/box.e44c163f.js" rel="preload" as="script"><link href="/../js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="/../css/box.3fe51d8b.css" rel="stylesheet"></head>
 
 <body>
 <noscript>
@@ -20,7 +20,7 @@
   <div id="box"></div>
 </div>
 <!-- 生成的文件将自动注入 -->
-<script type="text/javascript" src="/pwa-web/js/chunk-vendors.ecd76ec1.js"></script><script type="text/javascript" src="/pwa-web/js/app.47ca4404.js"></script><script type="text/javascript" src="/pwa-web/js/box.1e2bd2f8.js"></script></body>
+<script type="text/javascript" src="/../js/chunk-vendors.ecd76ec1.js"></script><script type="text/javascript" src="/../js/app.759c7ade.js"></script><script type="text/javascript" src="/../js/box.e44c163f.js"></script></body>
 <script>
   // 可以这么注册 Service Worker
   if (navigator.serviceWorker) {
