--- a/page.html
+++ b/page.html
@@ -10,7 +10,7 @@
   <link rel="icon" href="manifest/page/favicon.ico">
   <link rel="manifest" href="manifest/page/manifest.json">
   <title>page</title>
-<link href="/pwa-web/css/page.3fe51d8b.css" rel="preload" as="style"><link href="/pwa-web/js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="/pwa-web/js/page.7e722f54.js" rel="preload" as="script"><link href="/pwa-web/css/page.3fe51d8b.css" rel="stylesheet"></head>
+<link href="/../css/page.3fe51d8b.css" rel="preload" as="style"><link href="/../js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="/../js/page.3ca23854.js" rel="preload" as="script"><link href="/../css/page.3fe51d8b.css" rel="stylesheet"></head>
 
 <body>
 <noscript>
@@ -20,7 +20,7 @@
   <div id="page"></div>
 </div>
 <!-- 生成的文件将自动注入 -->
-<script type="text/javascript" src="/pwa-web/js/chunk-vendors.ecd76ec1.js"></script><script type="text/javascript" src="/pwa-web/js/app.47ca4404.js"></script><script type="text/javascript" src="/pwa-web/js/page.7e722f54.js"></script></body>
+<script type="text/javascript" src="/../js/chunk-vendors.ecd76ec1.js"></script><script type="text/javascript" src="/../js/app.759c7ade.js"></script><script type="text/javascript" src="/../js/page.3ca23854.js"></script></body>
 <script>
   // 可以这么注册 Service Worker
   if (navigator.serviceWorker) {
