--- a/box.html
+++ b/box.html
@@ -10,7 +10,7 @@
   <link rel="icon" href="manifest/box/favicon.ico">
   <link rel="manifest" href="manifest/box/manifest.json">
   <title>商店详情</title>
-<link href="/../../css/box.3fe51d8b.css" rel="preload" as="style"><link href="/../../js/box.ecda99ef.js" rel="preload" as="script"><link href="/../../js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="/../../css/box.3fe51d8b.css" rel="stylesheet"></head>
+<link href="css/box.3fe51d8b.css" rel="preload" as="style"><link href="js/box.808c7f28.js" rel="preload" as="script"><link href="js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="css/box.3fe51d8b.css" rel="stylesheet"></head>
 
 <body>
 <noscript>
@@ -20,7 +20,7 @@
   <div id="box"></div>
 </div>
 <!-- 生成的文件将自动注入 -->
-<script type="text/javascript" src="/../../js/chunk-vendors.ecd76ec1.js"></script><script type="text/javascript" src="/../../js/app.2041ce68.js"></script><script type="text/javascript" src="/../../js/box.ecda99ef.js"></script></body>
+<script type="text/javascript" src="js/chunk-vendors.ecd76ec1.js"></script><script type="text/javascript" src="js/app.83cba10a.js"></script><script type="text/javascript" src="js/box.808c7f28.js"></script></body>
 <script>
   // 可以这么注册 Service Worker
   if (navigator.serviceWorker) {
