--- a/manifest/shop/index.html
+++ b/manifest/shop/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" href="manifest/shop/favicon.ico">
   <link rel="manifest" href="manifest/shop/manifest.json">
   <title>商店</title>
-<link href="js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="js/shop.95c9e31a.js" rel="preload" as="script"></head>
+<link href="/pwa-web/manifest/js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="/pwa-web/manifest/js/shop.38aa1281.js" rel="preload" as="script"></head>
 
 <body>
 <noscript>
@@ -20,7 +20,7 @@
   <div id="shop"></div>
 </div>
 <!-- 生成的文件将自动注入 -->
-<script type="text/javascript" src="js/chunk-vendors.ecd76ec1.js"></script><script type="text/javascript" src="js/app.83cba10a.js"></script><script type="text/javascript" src="js/shop.95c9e31a.js"></script></body>
+<script type="text/javascript" src="/pwa-web/manifest/js/chunk-vendors.ecd76ec1.js"></script><script type="text/javascript" src="/pwa-web/manifest/js/app.ad64c910.js"></script><script type="text/javascript" src="/pwa-web/manifest/js/shop.38aa1281.js"></script></body>
 <script>
   // 可以这么注册 Service Worker
   if (navigator.serviceWorker) {
