--- a/manifest/index/index.html
+++ b/manifest/index/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" href="manifest/index/favicon.ico">
   <link rel="manifest" href="manifest/index/manifest.json">
   <title>首页</title>
-<link href="/pwa-web/manifest/css/index.3fe51d8b.css" rel="preload" as="style"><link href="/pwa-web/manifest/js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="/pwa-web/manifest/js/index.ffe497b9.js" rel="preload" as="script"><link href="/pwa-web/manifest/css/index.3fe51d8b.css" rel="stylesheet"></head>
+<link href="/pwa-web/css/index.3fe51d8b.css" rel="preload" as="style"><link href="/pwa-web/js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="/pwa-web/js/index.569a2c3e.js" rel="preload" as="script"><link href="/pwa-web/css/index.3fe51d8b.css" rel="stylesheet"></head>
 
 <body>
 <noscript>
@@ -20,7 +20,7 @@
   <div id="index"></div>
 </div>
 <!-- 生成的文件将自动注入 -->
-<script type="text/javascript" src="/pwa-web/manifest/js/chunk-vendors.ecd76ec1.js"></script><script type="text/javascript" src="/pwa-web/manifest/js/app.ad64c910.js"></script><script type="text/javascript" src="/pwa-web/manifest/js/index.ffe497b9.js"></script></body>
+<script type="text/javascript" src="/pwa-web/js/chunk-vendors.ecd76ec1.js"></script><script type="text/javascript" src="/pwa-web/js/app.47ca4404.js"></script><script type="text/javascript" src="/pwa-web/js/index.569a2c3e.js"></script></body>
 <script>
   // 可以这么注册 Service Worker
   if (navigator.serviceWorker) {
