--- a/box.html
+++ b/box.html
@@ -7,8 +7,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="favicon.ico">
-  <link rel="manifest" href="manifest.json">
+  <link rel="icon" href="manifest/box/favicon.ico">
+  <link rel="manifest" href="manifest/box/manifest.json">
   <title>商店详情</title>
 <link href="/pwa-web/css/box.3fe51d8b.css" rel="preload" as="style"><link href="/pwa-web/js/box.1e2bd2f8.js" rel="preload" as="script"><link href="/pwa-web/js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="/pwa-web/css/box.3fe51d8b.css" rel="stylesheet"></head>
 
