--- a/shop.html
+++ b/shop.html
@@ -7,8 +7,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="favicon.ico">
-  <link rel="manifest" href="manifest.json">
+  <link rel="icon" href="manifest/shop/favicon.ico">
+  <link rel="manifest" href="manifest/shop/manifest.json">
   <title>商店</title>
 <link href="/pwa-web/js/chunk-vendors.ecd76ec1.js" rel="preload" as="script"><link href="/pwa-web/js/shop.9962d2f1.js" rel="preload" as="script"></head>
 
